syntax = "proto3";

package sh.coherent.blockchain.evm.raw;
option go_package = "github.com/datadaodevs/evm-etl/protos/go/evm/raw";

message Data {
  Block block = 1;
  repeated TransactionReceipt transaction_receipts = 2;
  repeated CallTrace call_traces = 3;
}

message Block {
  string number = 1; // hex string
  string hash = 2;
  string parent_hash = 3;
  string nonce = 4;
  string sha3_uncles = 5;
  string logs_bloom = 6;
  string transactions_root = 7;
  string state_root = 8;
  string receipts_root = 9;
  string miner = 10;
  string difficulty = 11; // hex string
  string total_difficulty = 12; // hex string
  string extra_data = 13;
  string size = 14; // hex string
  string gas_limit = 15; // hex string
  string gas_used = 16; // hex string
  string timestamp = 17; // hex string
  repeated Transaction transactions = 18;
  repeated string uncles = 19;

  // extra fields from alchemy and quicknode
  string base_fee_per_gas = 20; // hex string
  string mix_hash = 21;
}

message Transaction {
  string block_hash = 1; // hex string
  string block_number = 2; // hex string
  string from = 3;
  string gas = 4; // hex string
  string gas_price = 5; // hex string
  string hash = 6;
  string input = 7;
  string nonce = 8; // hex string
  string to = 9;
  string transaction_index = 10; // hex string
  string value = 11; // hex string
  string v = 12;
  string r = 13;
  string s = 14;

  // extra fields from alchemy and quicknode
  repeated Access access_list = 15;
  string chain_id = 16; // hex string
  string max_fee_per_gas = 17; // hex string
  string max_priority_fee_per_gas = 18; // hex string
  string type = 19; // hex string

  // Optimism specific fields
  string queue_origin = 20;
  string tx_type = 21;
  string l1_tx_origin = 22;
  string l1_block_number = 23;
  string l1_timestamp = 24;
  string index = 25;
  string queue_index = 26;
  string raw_transaction = 27;
}

message TransactionReceipt {
  string transaction_hash = 1;
  string transaction_index = 2; // hex string
  string block_hash = 3;
  string block_number = 4; // hex string
  string from = 5;
  string to = 6;
  string cumulative_gas_used = 7; // hex string
  string effectiveGasPrice = 8; // hex string
  string gas_used = 9; // hex string
  string contract_address = 10;
  repeated Log logs = 11;
  string logs_bloom = 12;
  string type = 13; // hex string
  string root = 14;
  string status = 15; // hex string

  // Optimism specific fields
  string l1_fee = 16;
  string l1_fee_scalar = 17;
  string l1_gas_price = 18;
  string l1_gas_used = 19;
}

message Log {
  bool removed = 1;
  string log_index = 2; // hex string
  string transaction_index = 3; // hex string
  string transaction_hash = 4;
  string block_number = 5; // hex string
  string block_hash = 6;
  string address = 7;
  string data = 8;
  repeated string topics = 9;
}

// quicknode structure
message CallTrace {
  string type = 1;
  string from = 2;
  string to = 3;
  string value = 4; // hex string
  string gas = 5; // hex string
  string gas_used = 6; // hex string
  string input = 7;
  string output = 8;
  string time = 9;
  string error = 10;
  string revertReason = 11;
  repeated CallTrace calls = 12;
}

message Access {
  string address = 1;
  repeated string storage_keys = 2;
}
